--- a/frontend/src/app/left-menu/left-menu.component.html
+++ b/frontend/src/app/left-menu/left-menu.component.html
@@ -1,8 +1,16 @@
-<div class="left-menu-flex">
-  <div class="menu-item">Компания</div>
-  <div class="menu-item">Сделки</div>
-  <div class="menu-item">Мессенджер</div>
-  <div class="menu-item">Объявления</div>
-  <div class="menu-item">Контакты</div>
-  <div class="menu-item" id="last-menu-item">Задачи</div>
+<div class="left-menu">
+  <mat-nav-list class="left-menu-flex">
+    <a mat-list-item class="menu-item">Компания</a>
+    <a mat-list-item class="menu-item">Сделки</a>
+    <a mat-list-item class="menu-item">Мессенджер</a>
+    <a mat-list-item class="menu-item">Объявления</a>
+    <a mat-list-item href="contacts" class="menu-item">Контакты</a>
+    <a mat-list-item class="menu-item" id="last-menu-item">Задачи</a>
+  </mat-nav-list>
+
+  <mat-nav-list class="left-menu-flex">
+    <a mat-list-item class="menu-item">Имя Фамилия</a>
+    <a mat-list-item class="menu-item">Уведомления</a>
+    <a mat-list-item class="menu-item" id="last-menu-item">Настройки</a>
+  </mat-nav-list>
 </div>
