--- a/frontend/src/app/left-menu/left-menu.component.scss
+++ b/frontend/src/app/left-menu/left-menu.component.scss
@@ -1,10 +1,17 @@
+.left-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
 .left-menu-flex {
   width: 200px;
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: 30px;
-  background-color: #b3b3b3;
+  //background-color: #b3b3b3;
 }
 
 .menu-item {
