--- a/frontend/src/app/main-page/main-page.component.html
+++ b/frontend/src/app/main-page/main-page.component.html
@@ -1,9 +1,33 @@
-<mat-sidenav-container class="example-container">
-  <mat-sidenav opened mode="side">
-    <app-left-menu></app-left-menu>
-  </mat-sidenav>
-  <mat-sidenav opened mode="side" position="end"
-    ><app-right-menu></app-right-menu
-  ></mat-sidenav>
-  Implicit main content
-</mat-sidenav-container>
+<div
+  class="example-container"
+  [class.example-is-mobile]="mobileQuery.matches"
+  [class.example-is-computer]="!mobileQuery.matches"
+>
+  @if (authService.currentUserSig()) {
+  <mat-toolbar class="example-toolbar">
+    <button mat-icon-button (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <img src="assets/logo.svg" class="logo" />
+    <h1 class="example-app-name">Название компании</h1>
+  </mat-toolbar>
+  }
+
+  <mat-sidenav-container
+    class="example-sidenav-container"
+    [style.marginTop.px]="mobileQuery.matches ? 56 : 0"
+  >
+    <mat-sidenav
+      #snav
+      [mode]="mobileQuery.matches ? 'over' : 'side'"
+      [fixedInViewport]="mobileQuery.matches"
+      fixedTopGap="56"
+    >
+      <app-left-menu></app-left-menu>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <router-outlet> </router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
