--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -7,7 +7,7 @@
   text-align: center;
   min-height: 100vh;
   background-color: #21d4fd;
-  background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
+  background-image: linear-gradient(19deg, #21d4fd 0%, #4b61f2 100%);
   height: 100vh;
 }
 
@@ -28,7 +28,7 @@
 
 .submit-button {
   background-color: #e0e0e0;
-  background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
+  background-image: linear-gradient(19deg, #21d4fd 0%, #3021ff 100%);
   width: 100%;
   color: white !important;
   border: none;
