--- a/frontend/src/app/left-menu/left-menu.component.html
+++ b/frontend/src/app/left-menu/left-menu.component.html
@@ -4,7 +4,7 @@
     <a mat-list-item class="menu-item">Сделки</a>
     <a mat-list-item class="menu-item">Мессенджер</a>
     <a mat-list-item class="menu-item">Объявления</a>
-    <a mat-list-item href="contacts" class="menu-item">Контакты</a>
+    <a mat-list-item [routerLink]="['/contacts']" class="menu-item">Контакты</a>
     <a mat-list-item class="menu-item" id="last-menu-item">Задачи</a>
   </mat-nav-list>
 
