--- a/frontend/src/app/main-page/main-page.component.html
+++ b/frontend/src/app/main-page/main-page.component.html
@@ -3,13 +3,21 @@
   [class.example-is-mobile]="mobileQuery.matches"
   [class.example-is-computer]="!mobileQuery.matches"
 >
+  {{ authService.currentUserSig() | json }}
   @if (authService.currentUserSig()) {
   <mat-toolbar class="example-toolbar">
-    <button mat-icon-button (click)="snav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <img src="assets/logo.svg" class="logo" />
-    <h1 class="example-app-name">Название компании</h1>
+    <div class="icons">
+      <button mat-icon-button (click)="snav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <img src="assets/logo.svg" class="logo" />
+      <h1 class="example-app-name">Название компании</h1>
+    </div>
+    <div>
+      <button mat-icon-button (click)="logout()">
+        <mat-icon>logout</mat-icon>
+      </button>
+    </div>
   </mat-toolbar>
   }
 
