--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -26,6 +26,9 @@
       <button mat-raised-button class="submit-button" type="submit">
         Войти
       </button>
+      <button mat-raised-button class="submit-button" (click)="signUp()">
+        Зарегистрироваться
+      </button>
     </div>
   </form>
 </div>
