--- a/frontend/src/app/register/register.component.scss
+++ b/frontend/src/app/register/register.component.scss
@@ -12,7 +12,7 @@
 }
 
 .login-form {
-  min-width: 250px;
+  min-width: 850px;
   max-width: 400px;
   border-radius: 24px;
   padding: 15px;
@@ -40,4 +40,8 @@
   font-weight: bold;
   border-radius: 24px;
   transition: 0.25s;
+}
+
+.mat-mdc-form-field {
+  width: 90%;
 }
