contacts page and main page

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,28 +3,28 @@
   [class.example-is-mobile]="mobileQuery.matches"
   [class.example-is-computer]="!mobileQuery.matches"
 >
-  {{ authService.currentUserSig() | json }}
   @if (authService.currentUserSig()) {
-  <mat-toolbar class="example-toolbar">
-    <div class="icons">
-      <button mat-icon-button (click)="snav.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <img src="assets/logo.svg" class="logo" />
-      <h1 class="example-app-name">Название компании</h1>
-    </div>
-    <div>
-      <button mat-icon-button (click)="logout()">
-        <mat-icon>logout</mat-icon>
-      </button>
-    </div>
-  </mat-toolbar>
+    <mat-toolbar class="example-toolbar">
+      <div class="icons">
+        <button mat-icon-button (click)="snav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <img src="assets/logo.svg" class="logo"/>
+        <h1 class="example-app-name">Название компании</h1>
+      </div>
+      <div>
+        <button mat-icon-button (click)="logout()">
+          <mat-icon>logout</mat-icon>
+        </button>
+      </div>
+    </mat-toolbar>
   }
 
   <mat-sidenav-container
     class="example-sidenav-container"
     [style.marginTop.px]="mobileQuery.matches ? 56 : 0"
   >
+
     <mat-sidenav
       #snav
       [mode]="mobileQuery.matches ? 'over' : 'side'"
@@ -34,6 +34,8 @@
       <app-left-menu></app-left-menu>
     </mat-sidenav>
 
-    <mat-sidenav-content> <router-outlet></router-outlet> </mat-sidenav-content>
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
