--- a/frontend/src/app/left-menu/left-menu.component.html
+++ b/frontend/src/app/left-menu/left-menu.component.html
@@ -9,7 +9,9 @@
   </mat-nav-list>
 
   <mat-nav-list class="left-menu-flex">
-    <a mat-list-item class="menu-item">Имя Фамилия</a>
+    <a mat-list-item class="menu-item">
+      <h3>{{employeeName}}</h3>
+    </a>
     <a mat-list-item class="menu-item">Уведомления</a>
     <a mat-list-item class="menu-item">Настройки</a>
   </mat-nav-list>
