--- a/frontend/src/app/left-menu/left-menu.component.html
+++ b/frontend/src/app/left-menu/left-menu.component.html
@@ -2,17 +2,15 @@
   <mat-nav-list class="left-menu-flex">
     <a mat-list-item [routerLink]="['/company']" class="menu-item">Компания</a>
     <a mat-list-item class="menu-item">Сделки</a>
-    <a mat-list-item class="menu-item">Мессенджер</a>
-    <a mat-list-item class="menu-item">Объявления</a>
+    <a mat-list-item [routerLink]="['/ads']" class="menu-item">Объявления</a>
     <a mat-list-item [routerLink]="['/contacts']" class="menu-item">Контакты</a>
-    <a mat-list-item class="menu-item">Задачи</a>
+    <a mat-list-item class="menu-item">Уведомления</a>
+    <a mat-list-item class="menu-item">Настройки</a>
   </mat-nav-list>
 
   <mat-nav-list class="left-menu-flex">
     <a mat-list-item class="menu-item">
       <h3>{{employeeName}}</h3>
     </a>
-    <a mat-list-item class="menu-item">Уведомления</a>
-    <a mat-list-item class="menu-item">Настройки</a>
   </mat-nav-list>
 </div>
