--- a/frontend/src/app/left-menu/left-menu.component.html
+++ b/frontend/src/app/left-menu/left-menu.component.html
@@ -5,7 +5,7 @@
     <a mat-list-item [routerLink]="['/ads']" class="menu-item">Объявления</a>
     <a mat-list-item [routerLink]="['/contacts']" class="menu-item">Контакты</a>
     <a mat-list-item class="menu-item">Уведомления</a>
-    <a mat-list-item class="menu-item">Настройки</a>
+    <a mat-list-item [routerLink]="['/settings']" class="menu-item">Настройки</a>
   </mat-nav-list>
 
   <mat-nav-list class="left-menu-flex">
