--- a/frontend/src/app/contacts/contacts.component.html
+++ b/frontend/src/app/contacts/contacts.component.html
@@ -43,15 +43,13 @@
       <mat-icon>email</mat-icon>
       {{ contact.employee?.email }}
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>Написать</button>
-    </mat-card-actions>
   </mat-card>
 }
 
 <mat-paginator
+  style="margin-top: 12px"
   [length]="resultsLength"
-  [pageSize]="5"
-  [pageSizeOptions]="[5, 10, 25, 100]"
+  [pageSize]="3"
+  [pageSizeOptions]="[3, 5, 10, 25]"
   aria-label="Выберите страницу">
 </mat-paginator>
