--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -13,8 +13,14 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 $angular-primary: mat.define-palette(mat.$blue-palette, 500, 100, 900);
 $angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
@@ -48,3 +54,4 @@ $angular-dark-theme: mat.define-dark-theme(
 .theme-dark {
   @include mat.all-component-colors($angular-dark-theme);
 }
+
