--- a/frontend/src/app/contacts/contacts.component.scss
+++ b/frontend/src/app/contacts/contacts.component.scss
@@ -3,3 +3,11 @@
   margin-left: 12px;
   margin-right: 12px;
 }
+
+.block {
+  margin-top: 12px;
+  margin-bottom: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
