--- a/frontend/src/app/notes-changing-dialog/notes-changing-dialog.component.html
+++ b/frontend/src/app/notes-changing-dialog/notes-changing-dialog.component.html
@@ -8,5 +8,8 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Отмена</button>
-  <button mat-button [mat-dialog-close]="note" cdkFocusInitial>Сохранить</button>
+  <button mat-button [mat-dialog-close]="{
+  save: true,note: note
+  }" cdkFocusInitial>Сохранить
+  </button>
 </mat-dialog-actions>
