--- a/frontend/src/app/ads/ads.component.html
+++ b/frontend/src/app/ads/ads.component.html
@@ -3,11 +3,64 @@
     <h2>Объявления</h2>
   </mat-card-header>
   <mat-card-content>
+    <h2>Объявления вашей компании</h2>
     <button mat-flat-button color="primary" id="create-button" (click)="createAd()">Создать объявление</button>
+    <mat-grid-list cols="6">
 
-    <mat-grid-list cols="3" rowHeight="2:1">
+      @for (ad of myCompanyAds; track ad) {
+        <mat-grid-tile class="tile">
+          <mat-card class="example-card">
+            <mat-card-header>
+              <mat-card-subtitle>
+                Компания: {{ ad.company_name }}
+              </mat-card-subtitle>
+              <mat-card-title>{{ ad.title }}</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <div>
+                @if (ad.imgLoad === false) {
+                  <ngx-skeleton-loader
 
-      @for (ad of ads; track ad) {
+                    count="1"
+                    [theme]="{
+      borderradius: '7',
+      'background-color': '#ccc',
+      'margin-top': '0',
+      'min-height': '5vh',
+      width: '105px'
+    }"
+                  ></ngx-skeleton-loader>
+                }
+                <img
+                  (load)="loadImage(ad)"
+                  [hidden]="ad.imgLoad === false"
+                  [src]="ad.image_url"
+                  alt=""
+                  width="135px"
+                  class="w-100 h-auto image-border"
+                />
+              </div>
+              <mat-divider></mat-divider>
+              <div class="line">
+                <mat-icon>notes</mat-icon>
+                {{ ad.text }}
+              </div>
+              <mat-divider></mat-divider>
+              <div class="line">Цена: {{ ad.price }}</div>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button (click)="response(ad)">Откликнуться</button>
+            </mat-card-actions>
+          </mat-card>
+        </mat-grid-tile>
+      }
+
+    </mat-grid-list>
+
+    <h2>Все объявления:</h2>
+    <mat-grid-list cols="6">
+
+      @for (ad of otherCompaniesAds; track ad) {
         <mat-grid-tile class="tile">
           <mat-card class="example-card">
             <mat-card-header>
