working on stats page

--- a/frontend/src/app/company/company.component.html
+++ b/frontend/src/app/company/company.component.html
@@ -3,25 +3,55 @@
     <h2>Статистика компании</h2>
   </mat-card-header>
   <mat-card-content>
-    <div><p>Активных сделок: {{ mainPage?.data?.active_leads_amount ?? '' }}
-      На сумму: {{ mainPage?.data?.active_leads_price ?? '' }} руб. </p>
-    </div>
-    <div>
-      <p>
-        Закрыто сделок:{{ mainPage?.data?.closed_leads_amount ?? '' }}
-        На сумму: {{ mainPage?.data?.closed_leads_price ?? '' }} руб.</p>
-    </div>
-    <div>
-      <p>
-        Активных объявлений: {{ mainPage?.data?.active_ads_aount ?? '' }}
-      </p>
-    </div>
-    <div>
-      <p>
-        Рейтинг компании:{{ mainPage?.data?.company_absolute_rating ?? '' }}
-        Это выше, чем у {{ mainPage?.data?.company_relative_rating ?? '' }} компаний
-      </p>
-    </div>
-  </mat-card-content>
-</mat-card>
+    <div class="container">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="active-leads-header-image"></div>
+          <mat-card-title>Активных сделок:   {{ mainPage?.data?.active_leads_amount ?? '' }}</mat-card-title>
+          <mat-card-subtitle>
+            <p>
+              На сумму: {{ mainPage?.data?.active_leads_price ?? '' }} руб.
+            </p>
+          </mat-card-subtitle>
+        </mat-card-header>
+      </mat-card>
 
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="closed-leads-header-image"></div>
+          <mat-card-title>Закрыто сделок:   {{ mainPage?.data?.closed_leads_amount ?? '' }}</mat-card-title>
+          <mat-card-subtitle>
+            <p>
+              На сумму: {{ mainPage?.data?.closed_leads_price ?? '' }} руб.
+            </p>
+          </mat-card-subtitle>
+        </mat-card-header>
+      </mat-card>
+
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="active-ads-header-image"></div>
+          <mat-card-title>Активных объявлений:  {{ mainPage?.data?.active_ads_aount ?? '' }}</mat-card-title>
+        </mat-card-header>
+      </mat-card>
+
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="rating-header-image"></div>
+          <mat-card-title> Рейтинг компании:{{ mainPage?.data?.company_absolute_rating ?? '' }}</mat-card-title>
+          <mat-card-subtitle>
+            <p>
+              Это выше, чем у {{ mainPage?.data?.company_relative_rating ?? '' }} компаний
+            </p>
+          </mat-card-subtitle>
+        </mat-card-header>
+
+        <mat-card-content>
+
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+  </mat-card-content>
+
+</mat-card>
