--- a/frontend/src/app/ads/ads.component.html
+++ b/frontend/src/app/ads/ads.component.html
@@ -41,12 +41,12 @@
                 />
               </div>
               <mat-divider></mat-divider>
-              <div class="line">
+              <div class="block">
                 <mat-icon>notes</mat-icon>
                 {{ ad.text }}
               </div>
               <mat-divider></mat-divider>
-              <div class="line">Цена: {{ ad.price }}</div>
+              <div class="block">Цена: {{ ad.price }}</div>
             </mat-card-content>
             <mat-card-actions>
               <button mat-button (click)="response(ad)">Откликнуться</button>
@@ -57,7 +57,7 @@
 
     </mat-grid-list>
 
-    <h2>Все объявления:</h2>
+    <h2>Все объявления</h2>
     <mat-grid-list cols="6">
 
       @for (ad of otherCompaniesAds; track ad) {
@@ -94,12 +94,12 @@
                 />
               </div>
               <mat-divider></mat-divider>
-              <div class="line">
+              <div class="block">
                 <mat-icon>notes</mat-icon>
                 {{ ad.text }}
               </div>
               <mat-divider></mat-divider>
-              <div class="line">Цена: {{ ad.price }}</div>
+              <div class="block">Цена: {{ ad.price }}</div>
             </mat-card-content>
             <mat-card-actions>
               <button mat-button (click)="response(ad)">Откликнуться</button>
