--- a/frontend/src/app/ads/ads.component.scss
+++ b/frontend/src/app/ads/ads.component.scss
@@ -3,4 +3,11 @@
   margin-left: 24px;
 }
 
+.block {
+  margin-top: 12px;
+  margin-bottom: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
